[gd_scene load_steps=2 format=3 uid="uid://dshipselect00001"]

[ext_resource type="Script" path="res://scripts/ui/ship_select.gd" id="1_script"]

[node name="ShipSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.12, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0.9, 1)
theme_override_font_sizes/font_size = 42
text = "SELECT YOUR LOADOUT"
horizontal_alignment = 1

[node name="ContentRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="ShipColumn" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="ShipHeader" type="Label" parent="MarginContainer/VBoxContainer/ContentRow/ShipColumn"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.95, 0.2, 1)
theme_override_font_sizes/font_size = 28
text = "SHIP"
horizontal_alignment = 1

[node name="ShipScroll" type="ScrollContainer" parent="MarginContainer/VBoxContainer/ContentRow/ShipColumn"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ShipList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentRow/ShipColumn/ShipScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Separator" type="VSeparator" parent="MarginContainer/VBoxContainer/ContentRow"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="CaptainColumn" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="CaptainHeader" type="Label" parent="MarginContainer/VBoxContainer/ContentRow/CaptainColumn"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.95, 0.2, 1)
theme_override_font_sizes/font_size = 28
text = "CAPTAIN"
horizontal_alignment = 1

[node name="CaptainScroll" type="ScrollContainer" parent="MarginContainer/VBoxContainer/ContentRow/CaptainColumn"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="CaptainList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentRow/CaptainColumn/CaptainScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="BottomBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/BottomBar"]
custom_minimum_size = Vector2(140, 44)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "← Back"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/BottomBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LaunchButton" type="Button" parent="MarginContainer/VBoxContainer/BottomBar"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "▶ LAUNCH"
